# hull-abstraction

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Installation of PCL.md  LICENSE  NOTES.md  README.md  qi-config.json
benchmark/: CMakeLists.txt
doc/: Doxyfile  _r_e_a_d_m_e_8md.html  (+188 more)
prototype/: CMakeLists.txt
prototype/include/hull_abstraction/: functions.h  preprocessor.h  reconstructor.h
prototype/point_cloud_data/: 16_2.pcd  16_5.pcd
prototype/src/: main.cpp
prototype/src/hull_abstraction/: functions.cpp  preprocessor.cpp  reconstructor.cpp
ros/sim_demo/: CMakeLists.txt  package.xml
ros/sim_demo/launch/: remote_sim.launch
ros/sim_demo/machines/: beefy.machine
ros/src/hull_abstraction/: CMakeLists.txt  package.xml
ros/src/hull_abstraction/include/hull_abstraction/: functions.h  preprocessor.h  reconstructor.h
ros/src/hull_abstraction/include/pcl_utilization/: math_computing.h  pcl_utilization.h
ros/src/hull_abstraction/include/pcl_utils/: pcl_utils.h
ros/src/hull_abstraction/include/point_generation/: point_generation.h
ros/src/hull_abstraction/src/: bspline_surface_fitting_node.cpp  display_mesh_node.cpp  greedy_triangulation_node.cpp  load_pcd_node.cpp  marching_cubes_node.cpp  moving_least_squares_node.cpp  poisson_reconstruction_node.cpp  random_sampling_node.cpp
ros/src/hull_abstraction/src/bspline_surface_fitting_node/: bspline_surface_fitting.cpp  bspline_surface_fitting.h
ros/src/hull_abstraction/src/display_mesh_node/: display_mesh.cpp  display_mesh.h
ros/src/hull_abstraction/src/greedy_triangulation_node/: greedy_triangulation.cpp  greedy_triangulation.h
ros/src/hull_abstraction/src/hull_abstraction/: functions.cpp  preprocessor.cpp  reconstructor.cpp
ros/src/hull_abstraction/src/load_pcd_node/: load_pcd.cpp  load_pcd.h
ros/src/hull_abstraction/src/marching_cubes_node/: marching_cubes.cpp  marching_cubes.h
ros/src/hull_abstraction/src/moving_least_squares_node/: moving_least_squares.cpp  moving_least_squares.h
ros/src/hull_abstraction/src/pcl_utilization/: math_computing.cpp  pcl_utilization.cpp
ros/src/hull_abstraction/src/point_generation/: point_generation.cpp
ros/src/hull_abstraction/src/poisson_reconstruction_node/: poisson_reconstruction.cpp  poisson_reconstruction.h
ros/src/hull_abstraction/src/random_sampling_node/: random_sampling.cpp  random_sampling.h
ros/template_meta_pkg/template_actions/: CMakeLists.txt  package.xml
ros/template_meta_pkg/template_actions/action/: DoSomething.action
ros/template_meta_pkg/template_bringup/: CMakeLists.txt  package.xml
ros/template_meta_pkg/template_bringup/config/: example_default.yaml  fleet.rviz  rosconsole_debug.config
ros/template_meta_pkg/template_bringup/launch/: debug_threading.launch  example.launch  example_robot.launch  robot_fleet.launch  run_unit_tests.launch  threading.launch
ros/template_meta_pkg/template_bringup/launch/machines/: example.machine
ros/template_meta_pkg/template_moveit_planner/: CMakeLists.txt  README.txt  package.xml  template_moveit_interface_plugin_description.xml
ros/template_meta_pkg/template_moveit_planner/files_to_copy_elsewhere/: template_moveit_planning.yaml  template_moveit_planning_pipeline.launch.xml
ros/template_meta_pkg/template_moveit_planner/include/template_moveit_planner/: template_moveit_planner_interface.h  template_moveit_planner_manager.h  template_moveit_planning_context.h
ros/template_meta_pkg/template_moveit_planner/include/template_moveit_planner/template_moveit_library/: template_moveit_datatypes.h  template_moveit_parameters.h  template_moveit_planner.h
ros/template_meta_pkg/template_moveit_planner/src/: template_moveit_planner_interface.cpp  template_moveit_planner_manager.cpp  template_moveit_planning_context.cpp
ros/template_meta_pkg/template_moveit_planner/src/template_moveit_library/: template_moveit_datatypes.cpp  template_moveit_parameters.cpp  template_moveit_planner_interp.cpp
ros/template_meta_pkg/template_msgs/: CMakeLists.txt  package.xml
ros/template_meta_pkg/template_msgs/msg/: DoSomething.msg  Example.msg  Example2.msg
ros/template_meta_pkg/template_nodes/: CMakeLists.txt  package.xml
ros/template_meta_pkg/template_nodes/benchmark/template_nodes/: benchmarks.cpp
ros/template_meta_pkg/template_nodes/cfg/: DoSomething.cfg
ros/template_meta_pkg/template_nodes/include/template_nodes/example_library/: example_class.h
ros/template_meta_pkg/template_nodes/include/template_nodes/example_templates/: example_templates.h  example_templates.tpp
ros/template_meta_pkg/template_nodes/include/template_nodes/threading_library/: waitthread.h
ros/template_meta_pkg/template_nodes/src/: async_service_node.cpp  do_something_action_node.cpp  do_something_big_node.cpp  do_something_node.cpp  threading_node.cpp
ros/template_meta_pkg/template_nodes/src/async_service_node/: async_service.cpp  async_service.h
ros/template_meta_pkg/template_nodes/src/do_something_action_node/: do_something_action.cpp  do_something_action.h
ros/template_meta_pkg/template_nodes/src/do_something_big_node/: actions.cpp  do_something_big.cpp  do_something_big.h  dynamic_reconfigure.cpp  publications.cpp  services.cpp  subscriptions.cpp
ros/template_meta_pkg/template_nodes/src/do_something_node/: do_something.cpp  do_something.h
ros/template_meta_pkg/template_nodes/src/example_library/: example_class.cpp
ros/template_meta_pkg/template_nodes/src/example_templates/: example_templates.cpp
ros/template_meta_pkg/template_nodes/src/threading_library/: waitthread.cpp
ros/template_meta_pkg/template_nodes/src/threading_node/: threading.cpp  threading.h
ros/template_meta_pkg/template_nodes/src/threading_node/server/: exampleserver.cpp  exampleserver.h
ros/template_meta_pkg/template_nodes/test/example_library/: conduct_heavy_computation_test.cpp
ros/template_meta_pkg/template_nodes/test/example_templates/: template_class_test.cpp
ros/template_meta_pkg/template_srvs/: CMakeLists.txt  package.xml
ros/template_meta_pkg/template_srvs/srv/: Addition.srv  DoSomething.srv
(+1701 files in other folders)
