<?xml version="1.0"?>
<!-- Version 2 package.xml specification -->
<!-- http://www.ros.org/reps/rep-0140.html -->
<!-- ROS Wiki for package.xml -->
<!-- http://wiki.ros.org/catkin/package.xml -->
<package format="2">
    <name>template_bringup</name>
    <version>1.0.0</version>
    <description>A template for bringup packages</description>

    <maintainer email="haschke@igmr.rwth-aachen.de">Tobias Haschke</maintainer>
    
    <author email="stickann@igmr.rwth-aachen.de">Henrik Stickann</author>

    <url type="website">https://igm-doku.igm.rwth-aachen.de</url>
    <url type="repository">https://igm-git.igm.rwth-aachen.de/COAR/perfect_ros_repository</url>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <test_depend>roslaunch</test_depend>

    <exec_depend>template_description</exec_depend>
    <exec_depend>template_nodes</exec_depend>
</package>
