<?xml version="1.0"?>
<!-- Version 2 package.xml specification -->
<!-- http://www.ros.org/reps/rep-0140.html -->
<!-- ROS Wiki for package.xml -->
<!-- http://wiki.ros.org/catkin/package.xml -->
<package format="2">
    <name>template_nodes</name>
    <version>1.0.0</version>
    <description>A template for node packages</description>


    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="haschke@igmr.rwth-aachen.de">Tobias Haschke</maintainer>
    <maintainer email="charaf_eddine@igmr.rwth-aachen.de">Sami Charaf Eddine</maintainer>


    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <author email="stickann@igmr.rwth-aachen.de">Henrik Stickann</author>


    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <url type="website">https://igm-doku.igm.rwth-aachen.de</url>
    <url type="repository">https://igm-git.igm.rwth-aachen.de/COAR/perfect_ros_repository</url>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <!-- Format 2
        The *_depend tags are used to specify dependencies
        Dependencies can be catkin packages or system dependencies
        Format 1 to 2 conversions:
        Convert run_depend
            <run_depend>message_runtime</run_depend>
        to
            <build_export_depend>message_runtime</build_export_depend>
            <exec_depend>message_runtime</exec_depend>
        Convert build_depend and run_depend
            <build_depend>package</build_depend>
            <run_depend>package</run_depend>
        to
            <depend>package</depend> -->

    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>

    <!-- Use test_depend for packages you need only for testing: -->
    <test_depend>gtest</test_depend>

    <!-- Use doc_depend for packages you need to create documentation: -->
    <doc_depend>doxygen</doc_depend>

    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->

    <!-- Use build_export_depend for transitive build dependencies:
        (e.g. packages you expose but do not need to compile this package) -->
    <!--   <build_export_depend>message_runtime</build_export_depend> -->

    <!-- Use exec_depend for packages you need at runtime: -->
    <!--   <exec_depend>message_runtime</exec_depend> -->

    <!-- Use depend for build_depend, build_export_depend, exec_depend in one: -->
    <!--   <depend>dummy_package</depend> -->
    <depend>roscpp</depend>
    <depend>std_srvs</depend>
    <depend>dynamic_reconfigure</depend>

    <depend>igmr_node_interface</depend>
    <depend>template_msgs</depend>
    <depend>template_srvs</depend>
    <depend>template_actions</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
