<?xml version="1.0"?>
<!-- Version 2 package.xml specification -->
<!-- http://www.ros.org/reps/rep-0140.html -->
<!-- ROS Wiki for package.xml -->
<!-- http://wiki.ros.org/catkin/package.xml -->
<package format="2">
    <name>template_srvs</name>
    <version>1.0.0</version>
    <description>A template for service packages</description>


    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="haschke@igmr.rwth-aachen.de">Tobias Haschke</maintainer>
    <maintainer email="charaf_eddine@igmr.rwth-aachen.de">Sami Charaf Eddine</maintainer>


    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <author email="stickann@igmr.rwth-aachen.de">Henrik Stickann</author>


    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <url type="website">https://igm-doku.igm.rwth-aachen.de</url>
    <url type="repository">https://igm-git.igm.rwth-aachen.de/COAR/perfect_ros_repository</url>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <!-- Use buildtool_depend for build tool packages: -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>message_generation</build_depend>

    <!-- Use exec_depend for packages you need at runtime: -->
    <exec_depend>message_runtime</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <architecture_independent/>
    </export>
</package>
